2009-01-12  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* data/glade/ondemand-wizard.glade:
	* flumotion/common/vfsgio.py:
	* flumotion/common/vfsgnome.py:
	* flumotion/component/plugs/base.py:
	* flumotion/scenario/steps/ondemandstep.py:
	* flumotion/ui/fileselector.py:
	Added an optional apache logger to the on demand wizard page.
	Fixes #947

2009-01-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Xavier Queralt Mateu  <xqueralt@flumotion.com>
	patch by: Jordi Massaguer i Pla  <jordi@flumotion.com>

	* flumotion/component/producers/firewire/wizard_gtk.py:
	Deleted unused code when obtaining firewire audio production step.
	Fixes #949

2009-01-07  Xavier Queralt Mateu  <xqueralt@flumotion.com>
	
	reviewed by: Xavier Queralt Mateu  <xqueralt@flumotion.com>
	patch by: Pedro Gracia  <pedro@flumotion.com>

	* flumotion/component/encoders/smoke/smoke.py:
	Warn the user about the bug #565441 of Gstreamer smoke encoder.
	* flumotion/component/encoders/smoke/wizard_gtk.py:
	The smoke wizard page now uses the settings set by the user.
	Fixes #891

2009-01-05  Thomas Vander Stichele  <thomas at apestaart dot org>

	* flumotion/component/consumers/httpstreamer/resources.py:
	  Add a link to the ticket that discusses stealing the fd from
	  the Twisted reactor.

2008-12-30  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/admin/command/component.py:
	Of course, noone actually tests flumotion-command to see if the
	commands work.
	Fix property subcommand of component.

2008-12-16  Sebastien Merle  <sebastien@fluendo.com>

	* flumotion/component/misc/httpserver/cachedprovider.py:
	Properly stop the copying thread when the component is stopped,
	the component do not stay waking forever anymore. 

2008-12-15  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/common/vfsgnome.py:
	Fixed a minor error on vfsgnome.
